A better fix for the misaligned table header fields of the doc history page.  Superseeds the solution in [9585].  - Legacy-Id: 9586 Note: SVN reference [9585] has been migrated to Git commit cce75254c72287d58c177378f58db563c295281d

--- a/static/css/ietf.css
+++ b/static/css/ietf.css
@@ -94,7 +94,9 @@ body { padding-top: 70px; }
 
 /* Hack to make anchor-targets take up a bit more space vertically
  to work around the position fixed navbar which otherwise covers them */
-.anchor-target:before {
+h2.anchor-target:before,
+h3.anchor-target:before,	
+h4.anchor-target:before {
   content: '';
   display: block;
   position: relative;
